--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.16.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.5",
-    "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "next": "14.2.5",
-    "openai": "^4.53.2",
     "react": "^18",
     "react-dom": "^18"
   },
